<resources>
    <string name="app_name">innopolisWeatherApp</string>
    <string name="settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="temp">Temperature:</string>
    <string name="temp_min">Min temperature:</string>
    <string name="temp_max">Max temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="wind_direction">Wind direction (degrees):</string>
</resources>