<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_temperature_title"
        app:layout_constraintStart_toEndOf="@id/tv_temperature_title"
        app:layout_constraintTop_toTopOf="@id/tv_temperature_title" />

    <TextView
        android:id="@+id/tv_min_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/temp_min"
        app:layout_constraintStart_toStartOf="@id/tv_temperature_title"
        app:layout_constraintTop_toBottomOf="@id/tv_temperature_title" />

    <TextView
        android:id="@+id/tv_min_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_min_temperature_title"
        app:layout_constraintStart_toEndOf="@id/tv_min_temperature_title"
        app:layout_constraintTop_toTopOf="@id/tv_min_temperature_title" />

    <TextView
        android:id="@+id/tv_max_temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/temp_max"
        app:layout_constraintStart_toStartOf="@id/tv_min_temperature_title"
        app:layout_constraintTop_toBottomOf="@id/tv_min_temperature_title" />

    <TextView
        android:id="@+id/tv_max_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_max_temperature_title"
        app:layout_constraintStart_toEndOf="@id/tv_max_temperature_title"
        app:layout_constraintTop_toTopOf="@id/tv_max_temperature_title" />

    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/humidity"
        app:layout_constraintStart_toStartOf="@id/tv_max_temperature_title"
        app:layout_constraintTop_toBottomOf="@id/tv_max_temperature_title" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_humidity_title"
        app:layout_constraintStart_toEndOf="@id/tv_humidity_title"
        app:layout_constraintTop_toTopOf="@id/tv_humidity_title" />

    <TextView
        android:id="@+id/tv_wind_dir_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/wind_direction"
        app:layout_constraintStart_toStartOf="@id/tv_humidity_title"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title" />

    <TextView
        android:id="@+id/tv_wind_dir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/tv_wind_dir_title"
        app:layout_constraintStart_toEndOf="@id/tv_wind_dir_title"
        app:layout_constraintTop_toTopOf="@id/tv_wind_dir_title" />


</androidx.constraintlayout.widget.ConstraintLayout>